--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <header>
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="portfoliostyle.css">
+    <link rel="stylesheet" href="portfolio.css">
 </header>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
